--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyBFtj7DvIsuPBTLzNvoimCL0gdRaVW6iIY",
-    authDomain: "ballmovement-32892.firebaseapp.com",
-    databaseURL: "https://ballmovement-32892-default-rtdb.firebaseio.com",
-    projectId: "ballmovement-32892",
-    storageBucket: "ballmovement-32892.appspot.com",
-    messagingSenderId: "869198850291",
-    appId: "1:869198850291:web:c065e9c26d41ed05b96f86"
+     apiKey: "AIzaSyB_zwrFBewWhg-L3LX-YsBfqMKgZmehWxI",
+    authDomain: "class37-4da2d.firebaseapp.com",
+    databaseURL: "https://class37-4da2d-default-rtdb.firebaseio.com",
+    projectId: "class37-4da2d",
+    storageBucket: "class37-4da2d.appspot.com",
+    messagingSenderId: "443217755645",
+    appId: "1:443217755645:web:be5b4a0c99ef050017ed94"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
